--- a/src/Gistlyn/package.json
+++ b/src/Gistlyn/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "test-coverage": "jest --coverage",
-    "dtos-update": "cd src && typescript-ref"
+    "dtos": "cd src && typescript-ref"
   },
   "jest": {
     "globals": {
@@ -38,73 +38,72 @@
     ]
   },
   "dependencies": {
-    "@servicestack/client": "^1.0.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "@servicestack/client": "^1.0.4",
+    "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
-    "codemirror": "^5.32.0",
+    "codemirror": "^5.34.0",
     "es6-shim": "^0.35.3",
     "font-awesome": "^4.7.0",
-    "marked": "^0.3.7",
-    "octicons": "^7.0.1",
+    "marked": "^0.3.12",
+    "octicons": "^7.1.0",
     "react": "^16.0.0",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.0.0",
-    "react-dropzone": "^4.2.3",
-    "react-ga": "^2.3.5",
+    "react-dropzone": "^4.2.7",
+    "react-ga": "^2.4.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "@servicestack/cli": "^1.0.0",
+    "@servicestack/cli": "^1.0.2",
     "@types/classnames": "^2.2.3",
     "@types/codemirror": "0.0.53",
-    "@types/jest": "^21.1.5",
+    "@types/jest": "^21.1.10",
     "@types/marked": "^0.3.0",
-    "@types/node": "^8.0.47",
-    "@types/react": "^16.0.19",
+    "@types/node": "^8.9.2",
+    "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.2",
-    "@types/react-dropzone": "^4.1.0",
-    "@types/react-ga": "^2.1.3",
+    "@types/react-dropzone": "^4.2.0",
     "@types/react-redux": "^5.0.14",
     "add-asset-html-webpack-plugin": "^2.1.2",
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.6",
     "awesome-typescript-loader": "^3.2.3",
     "chalk": "^2.3.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
+    "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.4.1",
+    "css-loader": "^0.28.9",
     "del": "^2.2.2",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.6",
     "globule": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-msbuild": "^0.4.7",
-    "gulp-newer": "^1.3.0",
+    "gulp-newer": "^1.4.0",
     "gulp-nuget-pack": "^0.0.7",
     "gulp-nuget-restore": "^0.5.0",
     "gulp-util": "^3.0.7",
-    "html-loader": "^0.5.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "identity-obj-proxy": "^3.0.0",
-    "image-webpack-loader": "^3.4.2",
+    "image-webpack-loader": "^3.6.0",
     "imports-loader": "^0.7.1",
     "jest": "^21.2.1",
     "node-sass": "^4.5.3",
     "null-loader": "^0.1.1",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.1.0",
     "precss": "^2.0.0",
     "react-test-renderer": "^16.0.0",
     "run-sequence": "^1.2.2",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.19.1",
     "ts-jest": "^21.1.4",
-    "typescript": "^2.6.1",
+    "typescript": "^2.7.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.11.1"
   }
 }
