--- a/src/Gistlyn.ServiceInterface/packages.config
+++ b/src/Gistlyn.ServiceInterface/packages.config
@@ -2,12 +2,16 @@
 <packages>
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net461" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net461" />
-  <package id="ServiceStack" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Server" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.2.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
 </packages>
