--- a/src/Gistlyn/packages.config
+++ b/src/Gistlyn/packages.config
@@ -9,20 +9,21 @@
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net461" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net461" />
-  <package id="ServiceStack" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Server" version="5.0.2" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.0.2" targetFramework="net462" />
+  <package id="ServiceStack" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.2.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
@@ -35,12 +36,15 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.5.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
