--- a/src/Gistlyn.AppWinForms/packages.config
+++ b/src/Gistlyn.AppWinForms/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net462" />
-  <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net462" />
-  <package id="CefSharp.Common" version="57.0.0" targetFramework="net462" />
-  <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net462" />
+  <package id="cef.redist.x64" version="3.3325.1758" targetFramework="net462" />
+  <package id="cef.redist.x86" version="3.3325.1758" targetFramework="net462" />
+  <package id="CefSharp.Common" version="65.0.1" targetFramework="net462" />
+  <package id="CefSharp.WinForms" version="65.0.1" targetFramework="net462" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.6.1" targetFramework="net462" />
-  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.9.0" targetFramework="net462" />
+  <package id="Mono.Cecil" version="0.10.0" targetFramework="net462" />
   <package id="ServiceStack" version="5.2.0" targetFramework="net462" />
   <package id="ServiceStack.Client" version="5.2.0" targetFramework="net462" />
   <package id="ServiceStack.Common" version="5.2.0" targetFramework="net462" />
@@ -20,20 +20,21 @@
   <package id="ServiceStack.Redis" version="5.2.0" targetFramework="net462" />
   <package id="ServiceStack.Server" version="5.2.0" targetFramework="net462" />
   <package id="ServiceStack.Text" version="5.2.0" targetFramework="net462" />
-  <package id="SharpCompress" version="0.17.1" targetFramework="net462" />
-  <package id="Splat" version="2.0.0" targetFramework="net462" />
-  <package id="squirrel.windows" version="1.7.8" targetFramework="net462" />
+  <package id="SharpCompress" version="0.22.0" targetFramework="net462" />
+  <package id="Splat" version="5.0.2" targetFramework="net462" />
+  <package id="squirrel.windows" version="1.8.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
-  <package id="System.Console" version="4.3.0" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
+  <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net462" />
@@ -43,13 +44,13 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.1" targetFramework="net462" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Reflection.Metadata" version="1.5.0" targetFramework="net462" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net462" />
@@ -58,14 +59,15 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net462" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net462" />
