--- a/src/Gistlyn.SnippetEngine/packages.config
+++ b/src/Gistlyn.SnippetEngine/packages.config
@@ -1,31 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.6.1" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.6.1" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.9.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.9.0" targetFramework="net462" />
   <package id="Microsoft.Composition" version="1.0.31" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net462" developmentDependency="true" />
   <package id="ServiceStack.Text" version="5.2.0" targetFramework="net462" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net462" />
+  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.11" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.11" targetFramework="net462" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.11" targetFramework="net462" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.11" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net462" />
-  <package id="System.Composition" version="1.1.0" targetFramework="net462" />
-  <package id="System.Composition.AttributedModel" version="1.1.0" targetFramework="net462" />
-  <package id="System.Composition.Convention" version="1.1.0" targetFramework="net462" />
-  <package id="System.Composition.Hosting" version="1.1.0" targetFramework="net462" />
-  <package id="System.Composition.Runtime" version="1.1.0" targetFramework="net462" />
-  <package id="System.Composition.TypedParts" version="1.1.0" targetFramework="net462" />
-  <package id="System.Console" version="4.3.0" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
+  <package id="System.Composition" version="1.2.0" targetFramework="net462" />
+  <package id="System.Composition.AttributedModel" version="1.2.0" targetFramework="net462" />
+  <package id="System.Composition.Convention" version="1.2.0" targetFramework="net462" />
+  <package id="System.Composition.Hosting" version="1.2.0" targetFramework="net462" />
+  <package id="System.Composition.Runtime" version="1.2.0" targetFramework="net462" />
+  <package id="System.Composition.TypedParts" version="1.2.0" targetFramework="net462" />
+  <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net462" />
@@ -39,14 +45,14 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.1" targetFramework="net462" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Reflection.Metadata" version="1.5.0" targetFramework="net462" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net462" />
@@ -56,14 +62,15 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net462" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net462" />
