--- a/src/Gistlyn/packages.config
+++ b/src/Gistlyn/packages.config
@@ -1,29 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.9.0" targetFramework="net462" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.9.0" targetFramework="net462" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.3" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.10.0" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.10.0" targetFramework="net462" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net461" />
-  <package id="ServiceStack" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Server" version="5.2.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.2.0" targetFramework="net462" />
+  <package id="ServiceStack" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="5.4.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.4.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
@@ -36,16 +36,16 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
@@ -54,11 +54,11 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net462" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
